--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -27,4 +27,8 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   }
+
+  h3{
+    color: #27272a;
+  }
 </style>
