--- a/src/components/Scrollingcontainer.astro
+++ b/src/components/Scrollingcontainer.astro
@@ -12,13 +12,13 @@
       <ul role="list">
         <li>
           <h3>#1</h3>
-          <p> Søndag er den bedste dag på ugen. Ofte er vejret godt og jeg føler mig altid positiv og produktiv. 
+          <p>Søndag er min yndlingsdag i ugen. Det er typisk en dag med garanti for godt vejr, og jeg føler mig altid ekstra positiv og produktiv. 
           </p>
         </li>
   
         <li>
           <h3>#2</h3>
-          <p>Hvis jeg ikke blev optaget på multimediedesign studiet, ville jeg have overvejet at søge ind i politiet. 
+          <p>Hvis jeg ikke blev optaget på multimediedesign studiet, ville jeg have overvejet at søge ind i politiet. Jeg elsker at se danske krimiserier og film.
           </p>
         </li>
   
