--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -81,8 +81,10 @@ import Scrollingcontainer from "../components/Scrollingcontainer.astro";
   }
 
   button:hover{
-  background-color: #e0f2fe;
-	color: #ef4444;
+  /*background-color: #e0f2fe;
+	color: #ef4444;*/
+  background-color: #ffa5a5;
+
   }
 
   .imgContainer{
