--- a/src/pages/projekter.astro
+++ b/src/pages/projekter.astro
@@ -103,8 +103,7 @@ import Layout from "../layouts/Layout.astro";
   }
 
   button:hover{
-  background-color: #e0f2fe;
-	color: #ef4444;
+    background-color: #ffa5a5;
   }
   #first-section article{
   margin-top: 2rem;
