--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -31,7 +31,7 @@
 <style>
   a.active {
     font-weight: bold;
-    color: #000000; 
+    color: #27272a; 
   }
   .navbar {
     display: flex;
@@ -85,7 +85,7 @@
   display: block;
   width: 100%;
   height: 3px;
-  background-color: #000000;
+  background-color: #27272a;
   margin: 5px -10px;
   transition: 0.4s;
 }
