--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,15 +10,13 @@ import Scrollingcontainer from "../components/Scrollingcontainer.astro";
     <section>
       <h1>Nina Hildebrandt</h1>
       <h2>
-        Søger en spændende praktikplads inden for webdesign, hvor jeg kan
-        udfolde mine færdigheder og tilegne mig ny viden med fokus på kreativ
-        udvikling.
+      Passioneret om digitalt design, webdesign, UX og frontend-udvikling - søger en spændende praktikplads til efteråret. 
       </h2>
       <p class="indexp">
         Jeg er Nina Hildebrandt, 22 år gammel og bosat på Frederiksberg. På
         nuværende tidspunkt befinder jeg mig på 3. semester af
         multimediedesignstudiet på KEA. Jeg er på udkig efter en praktikplads
-        inden for områder som digitalt design, webdesign, UI/UX og
+        inden for digitalt design, webdesign, UX og
         frontend-udvikling. Jeg håber, at min profil kan imødekomme jeres behov
         og bidrage positivt til jeres team.
       </p>
