--- a/src/pages/projekter.astro
+++ b/src/pages/projekter.astro
@@ -13,10 +13,15 @@ import Layout from "../layouts/Layout.astro";
       for CA A-kasse.
     </p>
 
-    <> <p> Vi indledte opgaveprocessen med en målgruppeanalyse for at indsamle relevante indsigter. Derefter skabte vi prototyper i Figma, hvor vi kontinuerligt testede og tilpassede dem. Afslutningsvis implementerede vi vores færdigheder inden for
-      HTML, CSS og JavaScript til at kode de endelige websites. Projekterne har
-      derfor givet mig erfaring med værktøjer som <strong> Git, GitHub, Astro, Netlify,
-      Figma, supabase og Adobe-pakken.</strong> På mit igangværende 3. semester, hvor jeg har valgt valgfaget 'Frontend', har jeg fået mere erfaring med værktøjer og frameworks såsom <strong>React, Vite, Next.js, Tailwind og Vercel.</strong>
+    <p> Vi indledte opgaveprocessen med en målgruppeanalyse for at indsamle relevante indsigter. Derefter skabte vi prototyper i Figma, hvor vi kontinuerligt testede og tilpassede dem. Afslutningsvis implementerede vi vores færdigheder inden for
+      HTML, CSS og JavaScript til at kode de endelige websites.
+      </p>
+
+      <p>Mine 2. semesters projekter og mit nuværende valgfag på 3. semester i frontend-udvikling har udvidet min erfaring med forskellige værktøjer og frameworks, herunder <strong class="highlight">Git, GitHub, Astro, Netlify, Vercel, Figma, Adobe-pakken, React, Vite, Next.js, Tailwind og Supabase.</strong>
+
+
+
+
       </p>
   </div>
 
@@ -108,8 +113,10 @@ import Layout from "../layouts/Layout.astro";
   #first-section article{
   margin-top: 2rem;
   margin-bottom: 5rem;
+    }
 
-
+    .highlight{
+      font-weight: 600;
     }
 
   /* Media queries larger screens*/
