--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -113,6 +113,10 @@ import Scrollingcontainer from "../components/Scrollingcontainer.astro";
 margin-top: 4rem;
   }
 
+  h2{
+    font-weight: 500;
+  }
+
 
   @media screen and (min-width: 600px) {
 
@@ -121,6 +125,9 @@ margin-top: 4rem;
     gap: 1rem;
   }
 
+  h2{
+    font-weight: 400;
+  }
 
 
 
