--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -74,7 +74,7 @@ import Layout from "../layouts/Layout.astro";
       </section>
     </div>
 
-    <h2 class="uddoverskrift">Udannelse</h2>
+    <h2 class="uddoverskrift">Uddannelse</h2>
     
 <div class="grid2">
     <section class="col1">
