--- a/src/pages/projekter.astro
+++ b/src/pages/projekter.astro
@@ -25,7 +25,7 @@ import Layout from "../layouts/Layout.astro";
         Mine 2. semesters projekter og mit nuværende valgfag på 3. semester i
         frontend-udvikling har udvidet min erfaring med forskellige værktøjer og
         frameworks, herunder <strong class="highlight"
-          >Git, GitHub, Astro, Netlify, Vercel, Figma, Adobe-pakken, React,
+          >Git, GitHub, Netlify, Vercel, Figma, Adobe-pakken, Astro, React,
           Vite, Next.js, Tailwind og Supabase.</strong
         >
       </p>
