--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -30,7 +30,7 @@ import Scrollingcontainer from "../components/Scrollingcontainer.astro";
   <h3 class="praktik">Praktik forventninger</h3>
   <div class="imgContainer">
     <section>
-      <p>I løbet af min uddannelse har jeg udviklet en større interesse inden for digitalt design, UI/UX og frontendudvikling. Jeg håber på at lande en praktikplads, der understøtter et sundt og positivt teammiljø, men som også giver mig mulighed for at bidrage aktivt til projektarbejdet og deltage i skabelsen af digitale løsninger.</p>
+      <p>Jeg håber på at lande en praktikplads, der understøtter et sundt og positivt teammiljø, som giver mig mulighed for at bidrage aktivt til projektarbejdet og deltage i skabelsen af digitale løsninger.</p>
       <p class="pBottom">Jeg søger en praktikplads med en varighed på 10 uger med ønsket opstart i august eller start september.      </p>
     </section>
     <section><img src="/images/portræt-kopi.webp" alt=""></section>
@@ -96,7 +96,7 @@ import Scrollingcontainer from "../components/Scrollingcontainer.astro";
   }
   img{
     height: auto;
-    width: 280px;
+    width: 270px;
     border-radius: 2.625rem;
   }
 
