--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -8,7 +8,7 @@
       </section>
       <section class="col2">
         <h3>E-mail</h3>
-        <p>ninagh@live.dk / nihi0001@stud.kea.dk</p>
+        <p>ninagh@live.dk</p>
       </section>
     </div>
   
