--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Scrollingcontainer from "../components/Scrollingcontainer.astro";
     <section>
       <h1>Nina Hildebrandt</h1>
       <h2>
-      Passioneret om digitalt design, webdesign, UX og frontend-udvikling - søger en spændende praktikplads til efteråret. 
+      Interesseret i digitalt design, webdesign, UX og frontend-udvikling - søger en spændende praktikplads til efteråret. 
       </h2>
       <p class="indexp">
         Jeg er Nina Hildebrandt, 22 år gammel og bosat på Frederiksberg. På
